# MIQP_solver

./: .gitignore  README.md  solver.py  test.py
miqp_solver/: CMakeLists.txt  main.cpp
miqp_solver/include/: MIQPDefinition.hpp  MIQPNode.hpp  MIQPSolver.hpp  Utils.hpp
miqp_solver/src/: MIQPDefinition.cpp  MIQPNode.cpp  MIQPSolver.cpp
miqp_solver/tests/: CMakeLists.txt  test_miqp.cpp
python/: main.py  solver.py
